stir/shaken: Avoid a compiler extension of GCC.

ASTERISK-29776

Change-Id: I86e5eca66fb775a5744af0c929fb269e70575a73